# fermentation-monitor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  fermentation-monitor.code-workspace  requirements.txt
docs/: api.md  architecture.md  deployment.md
meta-fermentation-monitor/conf/: layer.conf
meta-fermentation-monitor/recipes-app/fermentation-monitor/: fermentation-monitor_1.0.bb
scripts/: build-yocto.sh  deploy.sh  setup-dev.sh
src/cpp/: CMakeLists.txt
src/cpp/include/: image_processor.hpp
src/cpp/src/: image_processor.cpp
src/python/: main.py
src/python/data_storage/: database.py
src/python/image_processing/: __init__.py  fermentation_analyzer.py  image_processor.py
src/python/web_api/: app.py
src/web/static/css/: style.css
src/web/static/js/: dashboard.js
src/web/templates/: base.html  dashboard.html  index.html
tests/mock/: camera.cpp  camera.hpp
tests/python/: create_test_image.py  test_image_processor.py
